frontend/deploy/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quality-frontend-route
  namespace: appstudio-qe
spec:
  to:
    kind: Service
    name: quality-frontend-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
